Bower 0.14-unreleased
=====================

* Allow omitting "+" prefix on tag additions.
* Support tag editing on compose screen.
* Inherit tags from message being replied to or forwarded.
* Also apply tags to sent message when using a custom post_sendmail action.
* Use domain of From address for right part of Message-ID.
* config: Add ui.default_save_directory option.
* Removed default HTML filter (was lynx).
* Improve search string parser.
* Fix bug where "body:(foo bar)" was unparsed as "body: ( foo bar )".
* Restrict places in search string where "~" is special to after
  whitespace or open parenthesis/brace.

Bower 0.13 (2021-07-24)
=======================
Please note there are a few key binding changes.

* Support composing messages with text/html alternative;
  see alt_html_filter config option. (Frank Seifferth)
* Add compose.signature_file config option.
* Support Alt+Key bindings for fast alias expansion in index. (Frank Seifferth)
* Use 'U' to toggle unread instead of 'N'. (Frank Seifferth)
* Add 'N' to search in opposite direction. (Frank Seifferth)
* Add 'w' as an alias to save parts. (Frank Seifferth)
* Add '$' to mark threads or messages as spam. (Sean E. Russell)
* compose: Use 'B' for "edit Bcc". (Frank Seifferth)
* Add thread_ordering config option. (Frank Seifferth)
* Increase thread pane size for long threads. (Frank Seifferth)
* Auto-refresh index view after a period of inactivity (off by default).
* Drop "Non-text part" and "Attachment" lines in reply templates.
* Minor improvements.

Bower 0.12 (2020-08-01)
=======================
This release requires Mercury version 14.01 or above.

* Create reply templates in bower instead of using notmuch reply output.
* Include filtered non-text parts in reply/forward/edit-as-new templates.
* Make the visibility of parts in the pager determine which parts to include
  in message templates.
* Pass PART_CONTENT_TYPE and PART_CHARSET environment variables to filters.